--- a/marriott_travel.html
+++ b/marriott_travel.html
@@ -9,7 +9,7 @@
 
 <!-- PagerDuty Extras -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link data-originalfavicon="/assets/favicon.png" href="https://d15pqkbmbgi02z.cloudfront.net/assets/favicon-ceec4a4213d9349d0d15165c65041772.png" id="favicon" rel="icon" type="image/png" />
+<link data-originalfavicon="/assets/favicon.png" href="https://cache.marriott.com/Images/Mobile/MC_Logos/MarriottWin8Icon.png" id="favicon" rel="icon" type="image/png" />
 
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
