--- a/wm.html
+++ b/wm.html
@@ -32,25 +32,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <img class="w3-image" src="./Online_Travel_Site1_files/wm_main.png" alt="Waste Management" width="1500" height="700">
   <div class="w3-padding w3-display-bottommiddle" style="width:55%">
     <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Hotel</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Rental</button>
+      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Collection</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Recycle</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Dumpster Rental</button>
     </div>
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
-      <h3>Travel the world with us</h3>
+      <h3>Waste Equals Opportunity</h3>
       <div class="w3-row-padding" style="margin:0 -16px;">
         <div class="w3-half">
           <label>From</label>
-          <input class="w3-input w3-border" type="text" placeholder="Departing from">
+          <input class="w3-input w3-border" type="text" placeholder="Collect from">
         </div>
         <div class="w3-half">
           <label>To</label>
-          <input class="w3-input w3-border" type="text" placeholder="Arriving at">
+          <input class="w3-input w3-border" type="text" placeholder="Date">
         </div>
       </div>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and find dates</button></p>
+      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search Availability</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
@@ -74,14 +74,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <!-- Good offers -->
   <div class="w3-container w3-margin-top">
-    <h3>JW Marriott Luxury Hotels and Resorts</h3>
-    <h6>Marriott Rewards <strong>Members</strong> offers.</h6>
+    <h3>Think Green</h3>
+    <h6>Changing times call for <strong>new ways</strong> of thinking and smarter ways of working.</h6>
   </div>
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
       <div class="w3-display-container">
-        <img src="./Online_Travel_Site1_files/cinqueterre.jpg" alt="Cinque Terre" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Cinque Terre</span>
+        <img src="./Online_Travel_Site1_files/wm_2.png" alt="WM Bagster" style="width:100%">
+        <span class="w3-display-bottomleft w3-padding">Residential Bagster</span>
       </div>
     </div>
     <div class="w3-half">
