--- a/wm.html
+++ b/wm.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="Collect from">
         </div>
         <div class="w3-half">
-          <label>To</label>
+          <label>Date</label>
           <input class="w3-input w3-border" type="text" placeholder="Date">
         </div>
       </div>
