--- a/wm.html
+++ b/wm.html
@@ -78,7 +78,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <h6>Changing times call for <strong>new ways</strong> of thinking and smarter ways of working.</h6>
   </div>
   <div class="w3-row-padding w3-text-white w3-large">
-    <div class="w3-half w3-margin-bottom">
+    <div class="w3-half w3-rest">
       <div class="w3-display-container">
         <img src="./Online_Travel_Site1_files/wm_2.png" alt="WM Bagster" style="width:100%">
         <span class="w3-display-bottomleft w3-padding">Residential Bagster</span>
