--- a/wm.html
+++ b/wm.html
@@ -263,7 +263,7 @@ document.getElementsByClassName("tablink")[0].click();
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
           ' }, ' +
-        ' "description": "[Critical] Marriott Core Service Failure: unexpected server response" ' +
+        ' "description": "[Critical] Waste Management Core Service Failure: unexpected server response" ' +
         '}'
        // alert('part 1 ' + eventObject);
         console.log(eventObject)
