--- a/user_accounts.html
+++ b/user_accounts.html
@@ -27,7 +27,8 @@
                     UsersJSON2CSV(xmlhttp.responseText);
                 }
             };
-            xmlhttp.open("GET", "https://" + document.querySelector('[name="subdomain"]').value + ".pagerduty.com/api/v1/users", true);
+            xmlhttp.open("GET", "https://api.pagerduty.com/users";
+         //   xmlhttp.open("GET", "https://" + document.querySelector('[name="subdomain"]').value + ".pagerduty.com/api/v1/users", true);
             xmlhttp.setRequestHeader("Content-Type", "application/json");
             xmlhttp.setRequestHeader("Accept", "application/vnd.pagerduty+json;version=2");            
             xmlhttp.setRequestHeader("Authorization", "Token token=" + document.querySelector('[name="token"]').value);
