--- a/sabre.html
+++ b/sabre.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0062)https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm -->
-<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Hotels & Resorts</title>
+<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Sabre - An innovative Technology</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./Online_Travel_Site1_files/w3.css">
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/sabre_header.jpg" alt="Sabre" width="1500" height="700">
+  <img class="w3-image" src="./Online_Travel_Site1_files/sabre_header.jpg" alt="Sabre" width="1155" height="687">
   <div class="w3-padding w3-display-bottommiddle" style="width:55%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
