--- a/sabre.html
+++ b/sabre.html
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/sabre_header.jpg" alt="Sabre" width="1155" height="687">
+  <img class="w3-image" src="./Online_Travel_Site1_files/sabre_header1.jpg" alt="Sabre" width="1500" height="700">
   <div class="w3-padding w3-display-bottommiddle" style="width:55%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
@@ -74,8 +74,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <!-- Good offers -->
   <div class="w3-container w3-margin-top">
-    <h3>JW Marriott Luxury Hotels and Resorts</h3>
-    <h6>Marriott Rewards <strong>Members</strong> offers.</h6>
+    <h3>Sabre</h3>
+    <h6>Sabre and <strong>Visa to expand B2B</strong> payments for the travel industry</h6>
   </div>
   <div class="w3-row-padding w3-text-white w3-large">
     <div class="w3-half w3-margin-bottom">
