--- a/safelite.html
+++ b/safelite.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
   <img class="w3-image" src="./Online_Travel_Site1_files/safelite.png" alt="Safelite" width="1400" height="600">
-  <div class="w3-padding w3-display-middle" style="width:55%">
+  <div class="w3-padding w3-display-middle" style="width:40%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Repair</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Quote</button>
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="Enter Zip">
         </div>
               </div>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and find dates</button></p>
+      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
