--- a/safelite.html
+++ b/safelite.html
@@ -24,10 +24,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
   <img class="w3-image" src="./Online_Travel_Site1_files/safelite.png" alt="Safelite" width="1400" height="600">
-  <div class="w3-padding w3-display-middle" style="width:40%">
+  <div class="w3-padding w3-display-middle" style="width:35%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-car w3-margin-right"></i>Repair</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-dollar-sign w3-margin-right"></i>Quote</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-dollar w3-margin-right"style='color:red'></i>Quote</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-info-circle w3-margin-right"></i>Status</button>
     </div>
 
