--- a/safelite.html
+++ b/safelite.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <img class="w3-image" src="./Online_Travel_Site1_files/safelite.png" alt="Safelite" width="1400" height="600">
   <div class="w3-padding w3-display-middle" style="width:35%">
     <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-car w3-margin-right"></i>Repair</button>
+      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-car w3-margin-right"></i>Repair</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-dollar w3-margin-right"style='color:red'></i>Quote</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-info-circle w3-margin-right"></i>Status</button>
     </div>
@@ -34,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
       <h3>Fix my Broken Glass</h3>
-      <div class="w3-row-padding" style="margin:0 -16px;w3-red">
+      <div class="w3-row-padding w3-red" style="margin:0 -16px;">
         <div class="w3-half">
           <label>Location</label>
           <input class="w3-input w3-border" type="text" placeholder="Enter Zip">
