--- a/safelite.html
+++ b/safelite.html
@@ -247,7 +247,7 @@ document.getElementsByClassName("tablink")[0].click();
             .done(function( msg ) {
              // alert( "Hello: " + msg );
           });
-          alert('Error searching Sabre.com')
+          alert('Error searching Safelite.com')
           return false;
         }
         </script>
