--- a/clear.html
+++ b/clear.html
@@ -23,34 +23,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Navigation Bar -->
 <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
-  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>SabreDuty.com</b></a>
+  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>Cherwell Duty.com</b></a>
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/sabre_header1.jpg" alt="Sabre" width="1400" height="600">
-  <div class="w3-padding w3-display-bottommiddle" style="width:55%">
+  <img class="w3-image" src="./Online_Travel_Site1_files/clear_background.jpg" alt="Cherwell" width="1400" height="600">
+  <div class="w3-padding w3-display-bottommiddle" style="width:30%">
     <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
+      <button class="w3-bar-item w3-button tablink w3-white" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Hotel</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Rental</button>
     </div>
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
-      <h3>Travel the world with us</h3>
-      <div class="w3-row-padding" style="margin:0 -16px;">
-        <div class="w3-half">
-          <label>From</label>
-          <input class="w3-input w3-border" type="text" placeholder="Departing from">
-        </div>
-        <div class="w3-half">
-          <label>To</label>
-          <input class="w3-input w3-border" type="text" placeholder="Arriving at">
-        </div>
-      </div>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search and find dates</button></p>
+      <h3>Register for the event</h3>
+            <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Register</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
@@ -72,75 +62,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px;">
 
-  <!-- Good offers -->
-  <div class="w3-container w3-margin-top">
-    <h3>Sabre</h3>
-    <h6>Sabre and <strong>Visa to expand B2B</strong> payments for the travel industry</h6>
-  </div>
-  <div class="w3-row-padding w3-text-white w3-large">
-    <div class="w3-half w3-margin-bottom">
-      <div class="w3-display-container">
-        <img src="./Online_Travel_Site1_files/cinqueterre.jpg" alt="Cinque Terre" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Cinque Terre</span>
-      </div>
-    </div>
-    <div class="w3-half">
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/newyork2.jpg" alt="New York" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">New York</span>
-          </div>
-        </div>
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/sanfran.jpg" alt="San Francisco" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">San Francisco</span>
-          </div>
-        </div>
-      </div>
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/pisa.jpg" alt="Pisa" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Pisa</span>
-          </div>
-        </div>
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="./Online_Travel_Site1_files/paris.jpg" alt="Paris" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Paris</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Explore Nature -->
-  <div class="w3-container">
-    <h3>Explore Nature</h3>
-    <p>Travel with us and see nature at its finest.</p>
-  </div>
-  <div class="w3-row-padding">
-    <div class="w3-half w3-margin-bottom">
-      <img src="./Online_Travel_Site1_files/ocean2.jpg" alt="Norway" style="width:100%">
-      <div class="w3-container w3-white">
-        <h3>West Coast, Norway</h3>
-        <p class="w3-opacity">Roundtrip from $79</p>
-        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-        <button class="w3-button w3-margin-bottom">Buy Tickets</button>
-      </div>
-    </div>
-    <div class="w3-half w3-margin-bottom">
-      <img src="./Online_Travel_Site1_files/mountains2.jpg" alt="Austria" style="width:100%">
-      <div class="w3-container w3-white">
-        <h3>Mountains, Austria</h3>
-        <p class="w3-opacity">One-way from $39</p>
-        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-        <button class="w3-button w3-margin-bottom">Buy Tickets</button>
-      </div>
-    </div>
-  </div>
 
   <!-- Newsletter -->
   <div class="w3-container">
@@ -233,7 +154,7 @@ document.getElementsByClassName("tablink")[0].click();
         function loginErrExample() {
             //alert('In loginErrExample');
           var serviceKey = getParameterByName('service_key');
-          if (!serviceKey) serviceKey = "25c7766eede1452ca427a2cd12a6d457"; /*ML service key*/
+          if (!serviceKey) serviceKey = "62cc79716eeb4d1fbaa1950e67cde29a"; /*ML service key*/
          /* var x = document.getElementById("checkoutError");
           x.style.display = "none";
           document.getElementById("checkoutButton").innerHTML = "Working";*/
@@ -285,15 +206,15 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Critical] API500 errors across all PROD sites, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Critical] API500 errors across Registration sites, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
-          ' "title": "[Critical] API500 errors across all PROD sites, High Error rates", ' +
+          ' "title": "[Critical] API500 errors across Registration sites, High Error rates", ' +
           ' "event_id": "8125363154448140714", ' +
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
           ' }, ' +
-        ' "description": "[Critical] API500 errors across all PROD sites: unexpected server response" ' +
+        ' "description": "[Critical] API500 errors across Registration sites, High Error rates" ' +
         '}'
        // alert('part 1 ' + eventObject);
         console.log(eventObject)
@@ -305,7 +226,7 @@ document.getElementsByClassName("tablink")[0].click();
           //  "data":  eventObject,
           //  "headers": {
           //    "Accept": "application/vnd.pagerduty+json;version=2",
-          //    "Authorization": "Token token=25c7766eede1452ca427a2cd12a6d457",
+          //    "Authorization": "Token token=62cc79716eeb4d1fbaa1950e67cde29a",
           //  }
           //};
           //$.ajax(settings).done(function (response) {
@@ -327,7 +248,7 @@ document.getElementsByClassName("tablink")[0].click();
             .done(function( msg ) {
              // alert( "Hello: " + msg );
           });
-          alert('Error searching Sabre.com')
+          alert('Error Registering at Clear Conference')
           return false;
         }
         </script>
