--- a/clear.html
+++ b/clear.html
@@ -31,7 +31,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
   <img class="w3-image" src="./Online_Travel_Site1_files/clear_background.jpg" alt="Cherwell" width="1400" height="600">
   <div class="w3-padding w3-display-bottommiddle" style="width:30%">
-    <div class="w3-bar w3-black">
+    <div class="w3-bar w3-blue">
       <button class="w3-bar-item w3-button tablink w3-white" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Hotel</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Rental</button>
@@ -40,39 +40,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
       <h3>Register for the event</h3>
-            <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Register</button></p>
+            <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Register</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <h3>Find the best hotels</h3>
       <p>Book a hotel with us and get the best fares and promotions.</p>
-      <p>We know hotels - we know comfort.</p>
-      <p><button class="w3-button w3-dark-grey" onclick="loginErrExample('Login');return(false);">Search Hotels</button></p>
+      <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Search Hotels</button></p>
     </div>
 
     <div id="Car" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
-      <h3>Best car rental in the world!</h3>
-      <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world with CarServiceRentalRUs</p>
+      <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world</p>
       <input class="w3-input w3-border" type="text" placeholder="Pick-up point">
-      <p><button class="w3-button w3-dark-grey">Search Availability</button></p>
+      <p><button class="w3-button w3-blue">Search Availability</button></p>
     </div>
   </div>
 </header>
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px;">
-
-
-  <!-- Newsletter -->
-  <div class="w3-container">
-    <div class="w3-panel w3-padding-16 w3-black w3-opacity w3-card w3-hover-opacity-off">
-      <h2>Get the best offers first!</h2>
-      <p>Join our newsletter.</p>
-      <label>E-mail</label>
-      <input class="w3-input w3-border" type="text" placeholder="Your Email address">
-      <button type="button" class="w3-button w3-red w3-margin-top">Subscribe</button>
-    </div>
-  </div>
 
   <!-- Contact -->
   <div class="w3-container">
