--- a/clear.html
+++ b/clear.html
@@ -65,8 +65,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <h2>Contact</h2>
     <p>Let us book your next trip!</p>
     <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-    <i class="fa fa-phone" style="width:30px"></i> Phone: <a class="sw-phone" title="Call with Dialpad" target="_blank" href="https://dialpad.com/launch?phone=%2B00%20151515">+00 151515</a><br>
-    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+    <i class="fa fa-phone" style="width:30px"></i> Phone: <a class="sw-phone" title="Call with Dialpad" target="_blank" href="https://dialpad.com/launch?phone=%2B00%20151515">+1 (123)415.1515</a><br>
+    <i class="fa fa-envelope" style="width:30px"> </i> Email: email@my_mail.com<br>
     <form action="https://www.w3schools.com/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required="" name="Name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required="" name="Email"></p>
