--- a/clear.html
+++ b/clear.html
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./Online_Travel_Site1_files/clear_background.jpg" alt="Cherwell" width="1000" height="577">
+  <img class="w3-image" src="./Online_Travel_Site1_files/clear_background.jpg" alt="Cherwell" width="1100" height="577">
   <div class="w3-padding w3-display-bottommiddle" style="width:30%">
     <div class="w3-bar w3-blue">
       <button class="w3-bar-item w3-button tablink w3-white" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Flight</button>
@@ -58,14 +58,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 </header>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:1100px;">
+<div class="w3-content" style="max-width:700px;">
 
   <!-- Contact -->
   <div class="w3-container">
     <h2>Contact</h2>
     <p>Let us book your next trip!</p>
     <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-    <i class="fa fa-phone" style="width:30px"></i> Phone: <a class="sw-phone" title="Call with Dialpad" target="_blank" href="https://dialpad.com/launch?phone=%2B00%20151515">+1 (123)415.1515</a><br>
+    <i class="fa fa-phone" style="width:30px"></i> Phone: <a class="sw-phone" title="Call with Dialpad" target="_blank" href="https://dialpad.com/launch?phone=%2B00%20151515">+1 (1234151515</a><br>
     <i class="fa fa-envelope" style="width:30px"> </i> Email: email@my_mail.com<br>
     <form action="https://www.w3schools.com/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required="" name="Name"></p>
