--- a/sprint.html
+++ b/sprint.html
@@ -23,36 +23,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Navigation Bar -->
 <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
-  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>BassProDuty.com</b></a>
+  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-black w3-hover-yellow"><b><i class="fa fa-map-marker w3-margin-right"></i>Sprint Duty.com</b></a>
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
   <img class="w3-image" src="./images/sprint.jpg" alt="Sprint" width="1500" height="600">
-  <div class="w3-padding w3-display-bottommiddle" style="width:30%">
-    <div class="w3-bar w3-blue">
+  <div class="w3-padding w3-display-middle" style="width:30%">
+    <div class="w3-bar w3-yellow">
       <button class="w3-bar-item w3-button tablink w3-white" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Orders</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Rent</button>
+      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bed w3-margin-right"></i>Deals</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-car w3-margin-right"></i>Locations</button>
     </div>
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
       <h3>Check Order</h3>
-            <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Check Order</button></p>
+            <p><button class="w3-button w3-yellow" onclick="loginErrExample('Login');return(false);">Check Order</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <h3>Find the best hotels</h3>
       <p>Book a hotel with us and get the best fares and promotions.</p>
-      <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Search Hotels</button></p>
+      <p><button class="w3-button w3-yellow" onclick="loginErrExample('Login');return(false);">Search Hotels</button></p>
     </div>
 
     <div id="Car" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world</p>
       <input class="w3-input w3-border" type="text" placeholder="Pick-up point">
-      <p><button class="w3-button w3-blue">Search Availability</button></p>
+      <p><button class="w3-button w3-yellow">Search Availability</button></p>
     </div>
   </div>
 </header>
