--- a/sprint.html
+++ b/sprint.html
@@ -157,11 +157,11 @@ document.getElementsByClassName("tablink")[0].click();
           var orderValue = '0';
           // Requires jQuery
           var eventObject = '{ ' +
-              ' "client_url": "https://rpm.newrelic.com/accounts/1818495/applications/105833762", ' +
+              ' "client_url": "https://chaplin201910110441108.saas.appdynamics.com/controller/", ' +
               ' "service_key"\: "' + serviceKey + '", ' +
               ' "incident_key"\: "' + dedupKey + '", ' +
-              ' "client"\: "New Relic", ' +
-              ' "vendor"\: "New Relic", ' +
+              ' "client"\: "View in AppDynamics", ' +
+              ' "vendor"\: "AppDynamics", ' +
               ' "event_type"\: "trigger", ' +
               ' "contexts"\: [ ' +
               ' {  ' +
@@ -187,7 +187,7 @@ document.getElementsByClassName("tablink")[0].click();
           '},' +
           '{ ' +
           ' "text": "Triggered Monitors", ' +
-          '  "href": "https://rpm.newrelic.com/accounts/1818495/applications/105833762", ' +
+          '  "href": "https://chaplin201910110441108.saas.appdynamics.com/controller/", ' +
           '  "type": "link" ' +
           ' } ' +
           ' ], ' +
