--- a/sprint.html
+++ b/sprint.html
@@ -1,6 +1,6 @@
 .<!DOCTYPE html>
 <!-- saved from url=(0062)https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm -->
-<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Bass Pro</title>
+<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Sprint Duty</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./Online_Travel_Site1_files/w3.css">
@@ -165,9 +165,9 @@ document.getElementsByClassName("tablink")[0].click();
               ' "event_type"\: "trigger", ' +
               ' "contexts"\: [ ' +
               ' {  ' +
-                  ' "src": "https://docs.newrelic.com/sites/default/files/thumbnails/image/insights_demo_dashboard.png", ' +
+                  ' "src": "https://docs.appdynamics.com/download/attachments/45485800/transactionflowmap.png?version=1&modificationDate=1518891675000&api=v2&effects=drop-shadow", ' +
                   ' "alt": "Snapshot of metric", ' +
-                  ' "href": "https://docs.newrelic.com/sites/default/files/thumbnails/image/insights_demo_dashboard.png", ' +
+                  ' "href": "https://docs.appdynamics.com/download/attachments/45485800/transactionflowmap.png?version=1&modificationDate=1518891675000&api=v2&effects=drop-shadow", ' +
                   ' "type": "image" ' +
               ' }, ' +
               ' { ' +
