--- a/7-11.html
+++ b/7-11.html
@@ -124,7 +124,7 @@ Store Number:<br>
           ' "priority": "High", ' +
           ' "title": "[Franchise Alert] Network Issue", ' +
           ' "event_id": "8125363154448140714", ' +
-          ' "tags": "7-Eleven, slurpee, store", ' +
+          ' "tags": "7-Eleven, network, store", ' +
           ' "Customer": "'+ customerName + '" ' +
           ' }, ' +
         ' "description": "[Franchise Alert] Network Issue" ' +
