--- a/apollo.htm
+++ b/apollo.htm
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <h3>Play Online </h3>
-      <p>Always available - always on or yopur money back!</p>
+      <p>Always available - always on or your money back!</p>
       <p><button class="w3-button w3-dark-grey" onclick="joinErrExample('Login');return(false);">Join Now</button></p>
     </div>
 
