--- a/milwaukee.htm
+++ b/milwaukee.htm
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./images/milwaukee.jpg" alt="Apollo" width="1400" height="600">
+  <img class="w3-image" src="./images/Milwaukee.jpg" alt="Apollo" width="1400" height="600">
   <div class="w3-display-middle" style="width:65%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Reserve</button>
